<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoTimetable">

    <Button
        android:id="@+id/generateTimetableButton"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:layout_marginBottom="160dp"
        android:background="@color/blue"
        android:text="@string/generate_Timetable_button"
        android:textColor="@color/screenBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noTimetableWarningTV"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/noTimetableIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shocked_icon" />

    <TextView
        android:id="@+id/oopsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/oops_text"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noTimetableIcon" />

    <TextView
        android:id="@+id/noTimetableWarningTV"
        android:layout_width="362dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_timetable_warning"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oopsTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>