<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOfModules">

    <Button
        android:id="@+id/generateTimetableButton"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"
        android:text="@string/generate_Timetable_button"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewTimetableButton"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:text="@string/view_Timetable_button"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/generateTimetableButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:background="@color/blue"
        android:text="@string/edit_button"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ListView
        android:id="@+id/modulesListView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="160dp"
        android:background="@color/screenBackground"
        android:cacheColorHint="@color/screenBackground"
        app:layout_constraintBottom_toTopOf="@+id/viewTimetableButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>